tests/NormalTests/paczka1/small_fuzzy/73445422.err
Error in line 2: GBJCgS34cCD A501 421,93
Error in line 1: GBJCgS34cCD A501 93,2
Error in line 6: q5pEXjbOZ7 S453 74,4
Error in line 4: GBJCgS34cCD S453 36,2
